QA refactor and clean up.